gitops/apps/jenkins/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
  labels:
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/part-of: platform-gitops
